# financial-document-analyzer-fullstack

./: .cursorrules  .gitignore  ANALYSIS_FORMATTING_IMPROVEMENTS.md  ANALYSIS_REPORT_SHOWCASE.md  BEFORE_AFTER_COMPARISON.md  QUICK_START_GUIDE.md  REFACTORING_COMPLETE.md  REFACTORING_STATUS.md  start-backend.sh
README/: ANALYSIS_REPORT_ENHANCEMENT.md  README.md
README/backend/: MIGRATION_SUMMARY.md  MONGODB_SETUP.md  SCRIPTS.md
README/crew-ai/: AGENT_DESIGN.md  AGENT_TRANSFORMATION.md  QUICK_START.md  README.md
README/frontend/: AUTHENTICATION.md
README/project/: VENV_CLEANUP_REPORT.md
backend/: .env.backup  .gitignore  DATABASE_SETUP.md  Dockerfile  Makefile  RBAC_IMPLEMENTATION.md  README.md  VALIDATION_GATE_IMPLEMENTATION.md  docker-compose.yml  env.example  investment_analysis_report.md  main.py  pyproject.toml  requirements-optional.txt  requirements.txt  start.sh  test_db_connection.py  test_validation.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py
backend/app/middleware/: __init__.py  auth.py
backend/app/models/: __init__.py  base.py  document.py  schemas.py  user.py
backend/app/routers/: analytics.py  auth.py  auth_oauth2.py  auth_test.py  crew_analysis.py  documents.py  health.py  protected.py
backend/app/utils/: __init__.py  file_validator.py  jwt.py  password.py
backend/financial_document_analyzer_crew/: CREW_SETUP_SUMMARY.md  MIGRATION_YAML_TO_PYTHON.md  TEST_CREW.md  investment_analysis_report.md  pyproject.toml  test_crew.py
backend/financial_document_analyzer_crew/src/financial_document_analyzer_crew/: crew.py  example_usage.py  main.py
backend/financial_document_analyzer_crew/src/financial_document_analyzer_crew/config/: agents.py  agents.yaml  tasks.yaml
backend/financial_document_analyzer_crew/src/financial_document_analyzer_crew/tools/: __init__.py  custom_tool.py
frontend/: FRONTEND_RBAC_IMPLEMENTATION.md  REFACTORING_SUMMARY.md  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AnalysisReport.tsx  DocumentAnalysisWorkflow.tsx  DocumentList.tsx  EnhancedDocumentAnalysisWorkflow.tsx  PDFUploadZone.tsx  ProtectedRoute.tsx  PublicRoute.tsx  QueryHistory.tsx  RoleBasedRoute.tsx
frontend/src/components/analysis/: ErrorAlert.tsx  MarkdownReport.tsx  NoResultsAlert.tsx  RawDataViewer.tsx  RecommendationCard.tsx  ReportActions.tsx  ReportHeader.tsx  ReportSection.tsx
frontend/src/components/auth/: PasswordField.tsx  RoleSelect.tsx  TextField.tsx
frontend/src/components/dashboard/: AdminActionsPanel.tsx  AdminStatsGrid.tsx  AnalyticsOverview.tsx  DocumentTypeAnalytics.tsx  (+5 more)
frontend/src/contexts/: AuthContext.tsx  AuthContextDefinition.tsx
frontend/src/hooks/: useAnalytics.ts  useAuth.ts  useCrewAnalysis.ts  useDocuments.ts  useFileUpload.ts  useGreeting.ts  useHealth.ts  useLogout.ts  useRegistrationForm.ts  useWorkflowState.ts
frontend/src/pages/: AdminDocuments.tsx  AdminHome.tsx  Home.tsx  Login.tsx  Register.tsx  SmartHome.tsx  Unauthorized.tsx  ViewerHome.tsx
frontend/src/services/: api.ts
frontend/src/types/: api.ts  errors.ts
frontend/src/utils/: errorHandling.ts  roleUtils.ts  tokenManager.ts
memory-bank/: activeContext.md  bugTracker.md  challengeRequirements.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
(+25 files in other folders)
