[project]
name = "financial_document_analyzer_crew"
version = "0.1.0"
description = "financial_document_analyzer_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai==0.130.0",
    "crewai-tools==0.47.1",
    "google-generativeai>=0.5.4",
    "python-dotenv>=1.0.0",
    "PyPDF2>=3.0.0",
    "pdfplumber>=0.10.0",
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "openpyxl>=3.1.0"
]

[project.scripts]
financial_document_analyzer_crew = "financial_document_analyzer_crew.main:run"
run_crew = "financial_document_analyzer_crew.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
